# OpenGL-project-with-Server-Study

./: CMakeLists.txt  main.cpp
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: CommonHeader.h
src/VAO/: VertexArray.h
src/shader/: CMakeLists.txt  shader.cpp  shader.h
src/shader/shaders/: vertex.glsl
